--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,5 +1,5 @@
-#container {
-    position: absolute;
-    width: 100%;
-    height: 100%;
+
+#sigma-container {
+  height: 600px;
+  background: white;
 }
