--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+html,
+body {
+  font-family: sans-serif;
+  background: #f9f9f9;
+}
+main {
+  margin: auto;
+  max-width: 800px;
+}
